force-app/main/default/objects/fw1__Invoice_Line__c/fw1__Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <label>Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>