force-app/main/default/objects/fw1__Invoice_Line__c/fields/ConvertedUnitAmount__c.field-meta.xml
<CustomField>
    <fullName>ConvertedUnitAmount__c</fullName>
    <formula>fw1__Unit_Price__c * fw1__Invoice__r.ConversionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>