force-app/main/default/objects/fw1__Invoice_Line__c/fields/DMS_Invcost__c.field-meta.xml
<CustomField>
    <fullName>DMS_Invcost__c</fullName>
    <label>DMS Invcost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>