force-app/main/default/objects/fw1__Invoice_Line__c/fields/DMS_qb_acct__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_acct__c</fullName>
    <label>DMS  qb acct</label>
    <length>50</length>
    <type>Text</type>
</CustomField>