force-app/main/default/objects/fw1__Invoice_Line__c/fields/External_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Invoice_Id__c</fullName>
    <formula>fw1__Invoice__r.External_Record_Id__c</formula>
    <label>External Invoice Id</label>
    <type>Text</type>
</CustomField>