force-app/main/default/objects/fw1__Invoice_Line__c/fields/External_Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Pricebook_Id__c</fullName>
    <formula>fw1__Price_Book__r.External_Record_Id__c</formula>
    <label>External Pricebook Id</label>
    <type>Text</type>
</CustomField>