force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Asset__c.field-meta.xml
<CustomField>
    <fullName>fw1__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>