force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__License_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>fw1__License_Term_Years__c</fullName>
    <label>License Term (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>