force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Non_Installment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Non_Installment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Installment</label>
    <type>Checkbox</type>
</CustomField>