force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Not_An_Asset__c.field-meta.xml
<CustomField>
    <fullName>fw1__Not_An_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not An Asset</label>
    <type>Checkbox</type>
</CustomField>