force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Note_1__c.field-meta.xml
<CustomField>
    <fullName>fw1__Note_1__c</fullName>
    <label>Note 1</label>
    <type>TextArea</type>
</CustomField>