force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Note_2__c.field-meta.xml
<CustomField>
    <fullName>fw1__Note_2__c</fullName>
    <label>Note 2</label>
    <type>TextArea</type>
</CustomField>