force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>