force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Price_Book__c.field-meta.xml
<CustomField>
    <fullName>fw1__Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>