force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Product2__c.field-meta.xml
<CustomField>
    <fullName>fw1__Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>