force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Recurring_Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>fw1__Recurring_Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurring Invoice Line</label>
    <referenceTo>fw1__Recurring_Invoice_Line__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>