force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>fw1__Sales_Tax__c</fullName>
    <formula>IF( fw1__Taxable__c, 
    IF( fw1__Is_Shipping_Taxable__c , 
        (fw1__Net_Amount__c +  fw1__Shipping_And_Handling__c)  *  fw1__Sales_Tax_Rate__c, 
        fw1__Net_Amount__c  *  fw1__Sales_Tax_Rate__c), 
    0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>