force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Taxable__c.field-meta.xml
<CustomField>
    <fullName>fw1__Taxable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Taxable</label>
    <type>Checkbox</type>
</CustomField>