force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw1__Usage_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Usage_Amount__c</fullName>
    <label>Usage Amount</label>
    <summarizedField>fw1__Invoice_Line_Usage__c.fw1__Amount__c</summarizedField>
    <summaryForeignKey>fw1__Invoice_Line_Usage__c.fw1__Invoice_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>