force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw2__Opportunity_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>fw2__Opportunity_Line_ID__c</fullName>
    <label>Opportunity Line ID</label>
    <type>TextArea</type>
</CustomField>