force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw2__Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>fw2__Order_Item_Id__c</fullName>
    <label>Order Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>