force-app/main/default/objects/fw1__Invoice_Line__c/fields/fw2__Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>fw2__Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>