force-app/main/default/objects/fw1__Invoice_Line__c/fields/Invoice_Line_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(fw1__Item_Description__c)),fw1__Item_Description__c, Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Line Name</label>
    <type>Text</type>
</CustomField>