force-app/main/default/objects/fw1__Invoice_Line__c/fields/LineRef__c.field-meta.xml
<CustomField>
    <fullName>LineRef__c</fullName>
    <label>Line Ref</label>
    <length>40</length>
    <type>Text</type>
</CustomField>