force-app/main/default/objects/fw1__Invoice_Line__c/fields/TotalConvertedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalConvertedAmount__c</fullName>
    <formula>fw1__Amount__c *  fw1__Invoice__r.ConversionRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Converted Amount(Line Item)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>