force-app/main/default/objects/fw1__Invoice_Line__c/validationRules/DiscountPrcnt_or_DiscountAmt_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>DiscountPrcnt_or_DiscountAmt_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL( fw1__Discount_Percentage__c )), NOT(ISNULL( fw1__Discount_Amount__c )))</errorConditionFormula>
    <errorMessage>You can fill only one field, either the &quot;Discount Percentage&quot; or the &quot;Discount Amount&quot;.</errorMessage>
</ValidationRule>